@@ -6,7 +6,7 @@
 ;; Author: Shun-ichi GOTO  <gotoh@taiyo.co.jp>,
 ;;         Hideyuki SHIRAI <shirai@meadowy.org>
 ;; Created: Wed Feb 28 03:31:00 2001
-;; Version: $Revision: 1.58 $
+;; Version: $Revision: 1.59 $
 ;; Keywords: Mew, mail, w3m, WWW, hypermedia
 
 ;; This file is a part of emacs-w3m.
@@ -283,42 +283,91 @@ This variable is effective only in XEmacs, Emacs 21 and Emacs 22."
 (defun w3m-mail-compose-with-mew (source url charset content-type
 					 to subject other-headers)
   "Compose a mail using Mew."
-  (mew-user-agent-compose to subject other-headers) ;; for mew-temp-dir init
-  (save-excursion
-    (let* ((basename (file-name-nondirectory (w3m-url-strip-query url)))
-	   (ct (downcase  content-type))
-	   (mew-attach-move-next-after-copy nil)
-	   filename cs)
+  (when (one-window-p)
+    (split-window))
+  (select-window (next-window))
+  (condition-case nil
+      (unless (and current-prefix-arg
+		   (boundp 'mew-init-p) mew-init-p
+		   (progn
+		     (mew-summary-jump-to-draft-buffer)
+		     (and (eq major-mode 'mew-draft-mode)
+			  (y-or-n-p "Attatch this draft? "))))
+	(mew-user-agent-compose to subject other-headers))
+    (quit
+     (if (y-or-n-p "Create new draft? ")
+	 (mew-user-agent-compose to subject other-headers)
+       (delete-window)
+       (error "Abort mail composing"))))
+  (let* ((basename (file-name-nondirectory (w3m-url-strip-query url)))
+	 (ct (downcase  content-type))
+	 (mew-attach-move-next-after-copy nil)
+	 (i 1)
+	 (pos -1)
+	 (csorig (mew-charset-to-cs (symbol-name charset)))
+	 last filename cs)
+    (unless (mew-attach-p)
+      (mew-draft-prepare-attachments))
+    ;; goto last attachment
+    (setq last (catch 'last
+		 (while (not (= pos (point)))
+		   (setq i (1+ i))
+		   (mew-attach-goto-number 'here `(,i))
+		   (when (mew-attach-line-lastp)
+		     (throw 'last t)))))
+    (when (eq csorig mew-cs-unknown)
+      (setq csorig nil))
+    (if (or (not last) (not (mew-attach-not-line012-1)))
+	(message "Can not attach from emacs-w3m here!")
       ;; Application/.*xml is not inline view with Mew.
-      (when (string-match "^application/.*xml$" ct)
-	(setq ct "text/xml"))
+      (cond
+       ((string= "application/xhtml+xml" ct)
+	(setq ct "text/html"))
+       ((string-match "^application/.*xml$" ct)
+	(setq ct "text/xml")))
       (setq filename (expand-file-name (cond
 					((and (string-match "^[\t ]*$" basename)
 					      (string= ct "text/html"))
 					 "index.html")
+					((and (string-match "^[\t ]*$" basename)
+					      (string= ct "text/xml"))
+					 "index.xml")
 					((string-match "^[\t ]*$" basename)
 					 "dummy")
 					(t
 					 basename))
 				       mew-temp-dir))
-      (when charset
-	(setq charset (symbol-name charset)))
       (with-temp-buffer
-	(setq cs
-	      (cond
-	       ((or (string= "text/html" ct)
-		    (string= "text/xml" ct))
-		(insert source)
-		(or (w3m-static-if (fboundp 'mew-text/html-detect-cs)
-			(mew-text/html-detect-cs (point-min) (point-max)))
-		    mew-cs-autoconv))
-	       ((string-match "^text/" ct)
-		(insert source)
-		mew-cs-autoconv)
-	       (t
-		(mew-set-buffer-multibyte nil)
-		(insert source)
-		mew-cs-binary)))
+	(cond
+	 ((string= "text/html" ct)
+	  (insert source)
+	  (setq cs (w3m-static-if (fboundp 'mew-text/html-detect-cs)
+		       (mew-text/html-detect-cs (point-min) (point-max))))
+	  (when (or (eq cs mew-cs-unknown) (not cs))
+	    (cond
+	     (csorig
+	      (setq cs csorig))
+	     (t
+	      (setq cs mew-cs-autoconv)))))
+	 ((string= "text/xml" ct)
+	  (insert source)
+	  (setq cs (w3m-static-if (fboundp 'mew-text/html-detect-cs)
+		       (mew-text/html-detect-cs (point-min) (point-max))))
+	  (when (or (eq cs mew-cs-unknown) (not cs))
+	    (cond
+	     (csorig
+	      (setq cs csorig))
+	     ((mew-coding-system-p 'utf-8)
+	      (setq cs 'utf-8))
+	     (t
+	      (setq cs mew-cs-autoconv)))))
+	 ((string-match "^text/" ct)
+	  (insert source)
+	  (setq cs mew-cs-autoconv))
+	 (t
+	  (mew-set-buffer-multibyte nil)
+	  (insert source)
+	  (setq cs mew-cs-binary)))
 	(setq charset (cond
 		       ((eq cs mew-cs-autoconv)
 			(mew-charset-guess-region (point-min) (point-max)))
@@ -331,43 +380,36 @@ This variable is effective only in XEmacs, Emacs 21 and Emacs 22."
 	 (write-region (point-min) (point-max) filename nil 'nomsg)))
       (when ct
 	(setq ct (mew-capitalize ct)))
-      (unless (mew-attach-p)
-	(mew-draft-prepare-attachments))
-      (if (not (mew-attach-not-line012-1))
-	  (message "Can not attach from emacs-w3m here!")
-	(mew-attach-copy filename (file-name-nondirectory filename))
-	;; content-type set
-	(let* ((nums (mew-syntax-nums))
-	       (syntax (mew-syntax-get-entry mew-encode-syntax nums))
-	       (file (mew-syntax-get-file syntax))
-	       (ctl (mew-syntax-get-ct syntax))
-	       (ct-orig (mew-syntax-get-value ctl 'cap))
-	       cte)
-	  (unless (string= ct ct-orig)
-	    (setq ctl (list ct))
-	    (mew-syntax-set-ct syntax ctl)
-	    (setq cte (mew-ctdb-cte (mew-ctdb-by-ct ct)))
-	    (mew-syntax-set-cte syntax cte)
-	    (mew-syntax-set-cdp syntax (mew-syntax-cdp-format ct file))
-	    (mew-encode-syntax-print mew-encode-syntax)))
-	;; charset set
-	(let* ((nums (mew-syntax-nums))
-	       (syntax (mew-syntax-get-entry mew-encode-syntax nums))
-	       (file (mew-syntax-get-file syntax))
-	       (ctl (mew-syntax-get-ct syntax))
-	       (ct (mew-syntax-get-value ctl 'cap))
-	       (params (mew-syntax-get-params ctl))
-	       (icharset "icharset")
-	       (ocharset "charset"))
-	  (when (and (string-match "^Text" ct) charset)
-	    (setq params (mew-delete icharset params))
-	    (setq params (cons (list icharset charset) params))
-	    (setq params (mew-delete ocharset params))
-	    (setq ctl (cons ct (cons (list ocharset charset) params)))
-	    (mew-syntax-set-ct syntax ctl))
-	  (mew-syntax-set-cd syntax url)
-	  (mew-encode-syntax-print mew-encode-syntax))
-	(message "Compose a mail using Mew with %s...done" url))
+      (mew-attach-copy filename (file-name-nondirectory filename))
+      ;; content-type check & set
+      (let* ((nums (mew-syntax-nums))
+	     (syntax (mew-syntax-get-entry mew-encode-syntax nums))
+	     (file (mew-syntax-get-file syntax))
+	     (ctl (mew-syntax-get-ct syntax))
+	     (ct-orig (mew-syntax-get-value ctl 'cap))
+	     cte)
+	(unless (string= ct ct-orig)
+	  (setq ctl (list ct))
+	  (mew-syntax-set-ct syntax ctl)
+	  (setq cte (mew-ctdb-cte (mew-ctdb-by-ct ct)))
+	  (mew-syntax-set-cte syntax cte)
+	  (mew-syntax-set-cdp syntax (mew-syntax-cdp-format ct file))
+	  (mew-encode-syntax-print mew-encode-syntax)))
+      ;; charset set
+      (let* ((nums (mew-syntax-nums))
+	     (syntax (mew-syntax-get-entry mew-encode-syntax nums))
+	     (file (mew-syntax-get-file syntax))
+	     (ctl (mew-syntax-get-ct syntax))
+	     (ct (mew-syntax-get-value ctl 'cap))
+	     (params (mew-syntax-get-params ctl))
+	     (ocharset "charset"))
+	(when (and (string-match "^Text" ct) charset)
+	  (setq params (mew-delete ocharset params))
+	  (setq ctl (cons ct (cons (list ocharset charset) params)))
+	  (mew-syntax-set-ct syntax ctl))
+	(mew-syntax-set-cd syntax url)
+	(mew-encode-syntax-print mew-encode-syntax))
+      (message "Compose a mail using Mew with %s...done" url)
       (when (and (file-exists-p filename) (file-writable-p filename))
 	(delete-file filename)))))
 
